--- a/web/src/app/history/history.component.html
+++ b/web/src/app/history/history.component.html
@@ -31,7 +31,7 @@
             <div class="entry-item">
               <div class="entry-details">
                 <div class="lottery-info">
-                  <strong>{{group.entries[0].lottery}}</strong>
+                  <strong>{{group.entries[0].lottery}} for {{formatDrawDate(group.entries[0].draw_date)}}</strong>
                   <span class="entry-time">Entry Recorded at: {{formatTime(group.entries[0].created_at)}}</span>
                 </div>
                 <div class="numbers">
@@ -50,7 +50,7 @@
               <div *ngFor="let entry of group.entries.slice(1)" class="entry-item">
                 <div class="entry-details">
                   <div class="lottery-info">
-                    <strong>{{entry.lottery}}</strong>
+                    <strong>{{entry.lottery}} for {{formatDrawDate(entry.draw_date)}}</strong>
                     <span class="entry-time">Entry Recorded at: {{formatTime(entry.created_at)}}</span>
                   </div>
                   <div class="numbers">
