--- a/web/src/app/shared/components/footer/footer.component.html
+++ b/web/src/app/shared/components/footer/footer.component.html
@@ -17,8 +17,8 @@
                 <li><a routerLink="/about">About</a></li>
                 <li><a routerLink="/faq">FAQs</a></li>
                 <li><a routerLink="/contact">Contact</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Privacy</a></li>
+                <li><a routerLink="/terms">Terms of Service</a></li>
+                <li><a routerLink="/privacy">Privacy</a></li>
               </ul>
             </div>
           </div>
