--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -1,5 +1,12 @@
 <app-layout>
 <section class="banner-section">
+  <div class="lottery-balls">
+    <div class="ball ball-1">7</div>
+    <div class="ball ball-2">23</div>
+    <div class="ball ball-3">45</div>
+    <div class="ball ball-4">12</div>
+    <div class="ball ball-5">68</div>
+  </div>
   <div class="container">
     <div class="row">
       <div class="col-12">
