--- a/web/src/app/shared/components/navbar/navbar.component.html
+++ b/web/src/app/shared/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <div class="col-lg-12">
           <div class="header-top-area-inner">
             <a routerLink="/" class="logo">
-              <img src="assets/images/lotto_logo.jpeg" alt="Total Free Lotto" style="height: 40px; width: auto; background: white; padding: 5px; border-radius: 5px;">
+              <img src="assets/images/logo2.png" alt="Total Free Lotto" style="height: 60px; width: auto; background: white; padding: 5px; border-radius: 5px;">
             </a>
             <div class="right-area">
               <div class="log-reg-area" *ngIf="!isLoggedIn">
