--- a/web/src/app/shared/components/login/login.component.html
+++ b/web/src/app/shared/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade log-reg-modal-wrapper log" [class.show]="isVisible" [style.display]="isVisible ? 'block' : 'none'">
+<div class="modal fade log-reg-modal-wrapper log" [class.show]="isVisible" [style.display]="isVisible ? 'block' : 'none'" style="overflow-y: auto;">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-body">
