--- a/web/src/app/shared/components/navbar/navbar.component.html
+++ b/web/src/app/shared/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             <div class="right-area">
               <div class="log-reg-area" *ngIf="!isLoggedIn">
                 <a href="#" class="custom-button1" (click)="openRegisterModal()">Sign Up</a>
-                <a href="#" class="custom-button2" (click)="openLoginModal()">Login In</a>
+                <a href="#" class="custom-button2" (click)="openLoginModal()">Login</a>
               </div>
               <div class="log-reg-area" *ngIf="isLoggedIn">
                 <a href="#" class="custom-button2" (click)="logout()">Logout</a>
