--- a/web/src/app/history/history.component.html
+++ b/web/src/app/history/history.component.html
@@ -68,7 +68,7 @@
         <div class="sidebar-content">
           <div class="date-picker-card">
             <h5>Pick a date</h5>
-            <input type="date" class="form-control" placeholder="yyyy/mm/dd" [(ngModel)]="selectedDate">
+            <input type="date" class="form-control" placeholder="yyyy/mm/dd" [(ngModel)]="selectedDate" (change)="filterByDate()">
           </div>
           
           <div class="quote-card">
