--- a/web/src/app/shared/components/signup/signup.component.html
+++ b/web/src/app/shared/components/signup/signup.component.html
@@ -35,7 +35,7 @@
               </div>
               <div class="custom-control custom-checkbox">
                 <input type="checkbox" class="custom-control-input" id="showPasswordSignup" [(ngModel)]="showPassword" [ngModelOptions]="{standalone: true}">
-                <label class="custom-control-label" for="showPasswordSignup">Show Password</label>
+                <label class="custom-control-label" for="showPasswordSignup">Show Passwor</label>
               </div>
               <p class="text-muted small">Note: You must provide either email or phone number (or both)</p>
               <div class="custom-control custom-checkbox">
